# visit-forecast

./: README.md  pyproject.toml
apps/streamlit/: Home.py  bootstrap.py  state.py
apps/streamlit/components/: charts.py  sidebar.py
apps/streamlit/pages/: 1_Run_Forecast.py  2_Data_Check.py
data/sample/: synthetic_visits.csv  synthetic_visits_small.csv
notebooks/: 00_Quickstart.ipynb
scripts/: build_sample_data.py  launch_streamlit_app.py  run_forecast_cli.py
src/visit_forecast/: __init__.py  cv.py  fiscal.py  io.py  model_prophet.py  service.py  tuning.py  types.py
tests/: conftest.py  test_capacity_phase_scenarios.py  test_capacity_phases.py  test_charts.py  test_conformal.py  test_cv.py  test_fiscal.py  test_sidebar.py  test_smoke.py  test_streamlit_state.py  test_tuning.py
